deprecated된 구문 수정